@@ -373,6 +373,10 @@ $GLOBALS['TL_DCA']['tl_module']['fields']['iso_listingSortField'] = array
 	'inputType'               => 'select',
 	'options_callback'		  => array('tl_module_isotope', 'getSortingFields'),
 	'eval'					  => array('includeBlankOption'=>true, 'tl_class'=>'clr w50'),
+	'save_callback' => array
+	(
+		array('IsotopeBackend', 'truncateProductCache'),
+	),
 );
 
 $GLOBALS['TL_DCA']['tl_module']['fields']['iso_listingSortDirection'] = array
