@@ -14,6 +14,7 @@ Version 1.3.rc1 (2011-??-??)
 - Fixed products DCA not loaded in rare cases
 - Fixed: hide customer definied fields in product edit mode
 - Fixed low price calculation for advanced prices
+- Fixed sorting by module configuration (#2037)
 
 Version 1.3.beta2 (2011-08-28)
 ------------------------------
